Sculpted changes dissapear visually when selecting a second object #58966

Closed
opened 2018-12-07 20:50:49 +01:00 by msalv · 18 comments

System Information
win10 64, nvidia 1060

Blender Version
Broken: blender-2.80.0-git.606223f6a61-windows64

Short description of error
When you disable "Lock object mode" in the Edit menu, and sculpt on one ojbect, if you select a second object, the sculpted changes will "disappear" from the first. The changes are still there, you just have to select the first object and you can see them, but selecting back and forth between the two objects will make the changes appear and disappear. And in order for this to not happen, you have to get out of Sculpt mode, but it will happen once you sculpt again.
Exact steps for others to reproduce the error
Using the attached blendfile, make sure "Lock object mode" is disabled in the Edit menu. The red monkey is already selected and in sculpt mode. Sculpt visible changes on the red monkey, select the white monkey (right click select presumably) and see the changes dissapear, select the red monkey again and see the changes come back.

Animated gif:
bug3.gif

bug3.blend

**System Information** win10 64, nvidia 1060 **Blender Version** Broken: blender-2.80.0-git.606223f6a61-windows64 **Short description of error** When you disable "Lock object mode" in the Edit menu, and sculpt on one ojbect, if you select a second object, the sculpted changes will "disappear" from the first. The changes are still there, you just have to select the first object and you can see them, but selecting back and forth between the two objects will make the changes appear and disappear. And in order for this to not happen, you have to get out of Sculpt mode, but it will happen once you sculpt again. **Exact steps for others to reproduce the error** Using the attached blendfile, make sure "Lock object mode" is disabled in the Edit menu. The red monkey is already selected and in sculpt mode. Sculpt visible changes on the red monkey, select the white monkey (right click select presumably) and see the changes dissapear, select the red monkey again and see the changes come back. Animated gif: ![bug3.gif](https://archive.blender.org/developer/F5874388/bug3.gif) [bug3.blend](https://archive.blender.org/developer/F5874257/bug3.blend)
Author

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador

#63863 was marked as duplicate of this issue

#63863 was marked as duplicate of this issue

#63216 was marked as duplicate of this issue

#63216 was marked as duplicate of this issue

#62182 was marked as duplicate of this issue

#62182 was marked as duplicate of this issue

#60989 was marked as duplicate of this issue

#60989 was marked as duplicate of this issue

#58821 was marked as duplicate of this issue

#58821 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-01-04 16:57:30 +01:00

I'm guessing that the changes are not propagated to the object mode mesh unless you exit sculpt mode.

I'm guessing that the changes are not propagated to the object mode mesh unless you exit sculpt mode.
Sergey Sharybin removed their assignment 2019-01-25 16:13:12 +01:00
Campbell Barton was assigned by Sergey Sharybin 2019-01-25 16:13:12 +01:00

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey

@ideasman42 , Not sure if changing active object in such configuration is expected to load sculpt changes back to actual object, or whether drawing is making a wrong decision about drawing sculpt object not using PBVH.

@ideasman42 , Not sure if changing active object in such configuration is expected to load sculpt changes back to actual object, or whether drawing is making a wrong decision about drawing sculpt object not using PBVH.

Added subscriber: @EdHernandez

Added subscriber: @EdHernandez

Added subscriber: @Jub2982

Added subscriber: @Jub2982

@Sergey it's not, this was a design choice to allow people to quickly switch between sculpting different objects.

Most likely the issue is our drawing code which only uses sculpt mode drawing for the active sculpt object.

@Sergey it's not, this was a design choice to allow people to quickly switch between sculpting different objects. Most likely the issue is our drawing code which only uses sculpt mode drawing for the active sculpt object.

Added subscriber: @GustavoRosa

Added subscriber: @GustavoRosa

Added subscribers: @gabbitt, @WilliamReynish

Added subscribers: @gabbitt, @WilliamReynish
Campbell Barton was unassigned by Sergey Sharybin 2019-04-02 17:28:03 +02:00
Clément Foucault was assigned by Sergey Sharybin 2019-04-02 17:28:03 +02:00

Added subscriber: @CraigJones

Added subscriber: @CraigJones

This issue was referenced by d4827cfa81

This issue was referenced by d4827cfa81214f095f4d6a0e644bc2f8328fa77c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58966
No description provided.