Fix T58966 Sculpted changes dissapear visually when selecting a second object

Display sculpt mesh if there is a sculpt session.