source/blender/draw/engines/eevee/eevee_materials.c
@@ -1615,11 +1615,10 @@ void EEVEE_materials_cache_populate(EEVEE_Data *vedata,
   const bool do_cull = (draw_ctx->v3d &&
                         (draw_ctx->v3d->shading.flag & V3D_SHADING_BACKFACE_CULLING));
   const bool is_active = (ob == draw_ctx->obact);
-  const bool is_sculpt_mode = is_active && (draw_ctx->object_mode & OB_MODE_SCULPT) != 0;
+  const bool is_sculpt_mode = (ob->sculpt != NULL);
   /* For now just force fully shaded with eevee when supported. */
-  const bool is_sculpt_mode_draw = is_sculpt_mode &&
-                                   ((ob->sculpt && ob->sculpt->pbvh) &&
-                                    (BKE_pbvh_type(ob->sculpt->pbvh) != PBVH_FACES));
+  const bool is_sculpt_mode_draw = ob->sculpt && ob->sculpt->pbvh &&
+                                   BKE_pbvh_type(ob->sculpt->pbvh) != PBVH_FACES;
   const bool is_default_mode_shader = is_sculpt_mode;
 
   /* First get materials for this mesh. */
